# rust.cpclib

./: .editorconfig  .gitattributes  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CPCLIB_ASM_IMPROVEMENTS.md  Cargo.toml  Makefile  README.md  Readme.mkd  TODO_BASM_DOCS_IMPROVEMENTS.md  build_osx_from_linux.sh  build_windows.sh  buildlog.txt  cargo-timing-20210909T092842Z.html  check_output.txt  clippy_output.txt  cpclib_asm_warnings.txt  deny.toml  directive_comparison.md  doc.html  doc_single.html  history.m4  index.html  mkdocs.yml  publish_order.txt  rustc-ice-2025-09-19T08_46_36-1718474.txt  rustc-ice-2025-09-19T08_47_24-1732564.txt  rustc-ice-2025-09-19T08_48_11-1733795.txt  rustc-ice-2026-01-13T14_14_40-22832.txt  rustfmt.toml  sitemap.xml  test_output.txt
.cargo/: config.toml  (+1 more)
basm/: Cargo.toml  index.html
basm/benches/: basm_benchs.rs
basm/cmdline/: index.html
basm/directives/: index.html
basm/expression-types/: index.html
basm/functions/: index.html
basm/orgams_directives/: index.html
basm/src/: main.rs
basm/syntax/: index.html
basm/tests/: rasm_tests.rs  real_tests.rs
bdasm/: Cargo.toml  build.rs  index.html
bdasm/cmdline/: index.html
bdasm/examples/: index.html
bdasm/src/: main.rs
cpclib-asm/: Cargo.toml  Readme.md  basm_doc.md  build.rs  test.sh
cpclib-asm-webasm/: Cargo.toml  Makefile
cpclib-asm-webasm/src/: asm.rs  basic.rs  lib.rs  sna.rs
cpclib-asm-webasm/tests/: web.rs
cpclib-asm-webasm/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
cpclib-asm/assets/: crtc.asm  deexo.asm  deshrink.asm  ga.asm  lz48decrunch.asm  lz49decrunch.asm  pixels-routs.asm  unaplib.asm  unaplib_fast.asm  unlzsa1_fast.asm  unlzsa2_fast.asm  unlzsa2_small.asm
cpclib-asm/benches/: located_expr.rs  parse_factor.rs  parser_strings.rs
cpclib-asm/examples/: generate_loop4000.rs
cpclib-asm/extra/: apultra.c  apultra.h  exomizer.c  lz4.c
cpclib-asm/src/: basm_utils.rs  builder.rs  crunchers.rs  disass.rs  error.rs  lib.rs  orgams.rs  parser.rs  preamble.rs  progress.rs  rewrite.rs
cpclib-asm/tests/: assemble_directives.rs  assemble_simple.rs  basic_loader.asm  duration.asm  expr_regressions.rs  located_expr_prefixed.rs  macro.asm  opcode.asm  parse_regression.rs  proximity_labels.rs  regression_assembler.rs  snapshot.asm  span_covering.rs  struct.asm  test_max_multi_arg.asm  test_max_multi_arg.rs  test_max_multi_arg_missing_file.asm  timings.rs  timings.txt
cpclib-asm/tools/: build_firmware_labels.py
cpclib-basic/: Cargo.toml  README.MD  test_assign.bas  test_output.txt  test_output_if.txt  test_results.txt  test_roundtrip.rs  test_sectfgt_output.txt
cpclib-basic/src/: binary_parser.rs  lib.rs  parser.rs  string_parser.rs  string_parser.sync-conflict-20260114-084024-ADPE4OJ.rs  string_parser.sync-conflict-20260117-095028-ASQCKNN.rs  tokens.rs
cpclib-basic/tests/: Locomotive BASIC - CPCWiki.htm  TEST-CAT.BAS  Technical information about Locomotive BASIC - CPCWiki.htm  amstrad_cpc_projects.rs  catart_tests.rs  common_book_tests.rs  constant.rs  documentation.rs  examine_pdf.py  extract_all_listings.py  extract_listings.py  failures.rs  generate_book_tests.py  locomotive_basic_wiki_examples.rs  print.rs  test_binary.rs  test_book_amsoft_amstrad_basic_initiation_au_basic_amstrad_partie1_soft411_ocr_.rs  test_book_amsoft_amstrad_basic_initiation_au_basic_amstrad_partie1_soft411_ocr__1.rs  test_book_amstrad_cpc6128_manuel_de_lutilisateur_1985_amsoft_fr_text.rs  test_book_basic_amstrad_cpc464_664_6128_1_methodes_pratiques_1985__acme_.rs  test_book_basic_amstrad_cpc464_664_6128_2_programmes_et_fichiers_1986__acme_.rs  test_debug.rs  test_debug_length.rs  test_length_debug.rs  test_original_bug.rs  test_reconstruction.rs  test_reconstruction_accuracy.rs  test_roundtrip.rs  test_run_keyword.rs  test_str_float.rs  test_string_reconstruction.rs  variable.rs
cpclib-basm/: Cargo.toml  LOADER.BAS  Readme.md  build.rs  gruik  launch_example_on_emulator.sh  memory_issue.txt  mkdocs.yml  package-lock.json  package.json  pgo.sh  profile.sh  rasmoutput.rasm  rasmoutput.sna  test.lst  test.sna
cpclib-basm/benches/: basm_benchs.rs
cpclib-basm/docs/: directives.md  expressions.md  index.md  syntax.md
cpclib-basm/src/: lib.rs  main.rs
cpclib-basmdoc/: CROSS_REFERENCES.md  Cargo.toml  build.rs  demosystem.html  doc..md  doc.html  doc_ascii85.html  doc_default.html  doc_minified.html  example_output.md  test_css_output.html  test_dynamic.html  test_final.html  test_final_aligned.html  test_fixed.html  test_inline_btn.html  test_macro_refs.asm  test_multi.html  test_output_undoc.html  test_output_with_undoc.html  test_single.html  test_undocumented.asm  test_with.html  test_with_clear_btn.html  test_with_symbols.html  test_without.html
cpclib-bdasm/: Cargo.toml  tries.sh
cpclib-bndbuild/: .gitignore  Cargo.toml  Readme.md  aliases.sh  at.diff  build.rs  schema.json
cpclib-borgams/: Cargo.toml  build.rs
cpclib-catalog/: Cargo.toml  build.rs
cpclib-catart/: Cargo.toml  README.md
cpclib-common/: Cargo.toml
cpclib-cpr/: Cargo.toml
cpclib-cprcli/: Cargo.toml
cpclib-crunch/: Cargo.toml  cargo.exo
cpclib-crunchers/: Cargo.toml  build.rs
cpclib-csl/: Cargo.toml  test_validation.rs
cpclib-cslcli/: Cargo.toml
cpclib-disc/: Cargo.toml  build.rs
cpclib-emucontrol/: Cargo.toml
cpclib-files/: Cargo.toml
cpclib-image/: Cargo.toml
cpclib-imgconverter/: Cargo.toml  Readme.md  build.rs
cpclib-integration-tests/: Cargo.toml  test_catart.dsk
cpclib-locomotive/: Cargo.toml
cpclib-macros/: Cargo.toml
cpclib-orgams-ascii/: Cargo.toml  DIRECTIVE_MAPPINGS.md  FORMAT_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.md  ORGAMS_FORMAT_LEARNED.md  PROGRESS.md  README.md  RECONSTRUCTION_STATUS.md  STATUS.md  STRING_TABLE_ANALYSIS.md  SYSTEMATIZATION_ANALYSIS.md  analyze_command_bytes.py  check_spc.rs  correlate_directives.py  extract_directives.py  generate_rust_constants.py  orgams_format.md  show_const_errors.rs  test_all_orgams.py
cpclib-python/: Cargo.toml  Makefile  README.md  TESTING.md  build.rs
(+2636 files in other folders)
