[workspace]
members = [
  "cpclib-asm",
  "cpclib-basic",
  "cpclib-basm",
  "cpclib-bdasm",
  "cpclib-bndbuild",
  "cpclib-bndbuild-tauri/src-tauri",
  "cpclib-common",
  "cpclib-cpr",
  "cpclib-cprcli", 
  "cpclib-crunchers",
  "cpclib-disc",
  "cpclib-emucontrol", 
  "cpclib-image",
  "cpclib-imgconverter",
  "cpclib-macros",
  "cpclib-runner", 
  "cpclib-sna",
  "cpclib-tokens",
  "cpclib-visual-basm",
  "cpclib-visual-bndbuild",
  "cpclib-wasm", 
  "cpclib-xfer",
  "cpclib-xfertool",
  "cpclib-z80emu",
  "cpclib", "cpclib-crunch", 
  #"cpclib-bndbuild-ratatui",
  #  "cpclib-xferfs",
]

resolver = "2"

[workspace.package]
authors = ["Romain Giot <giot.romain@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/cpcsdk/rust.cpclib"
homepage = "https://github.com/cpcsdk/rust.cpclib"
description = "Amstrad CPC crossdev toolchain"

[workspace.dependencies]

cpclib = { version = "0.10.0", path = "cpclib", default-features = false }
cpclib-asm = { version = "0.9.0", path = "cpclib-asm", default-features = false }
cpclib-basic = { version = "0.9.0", path = "cpclib-basic", default-features = false }
cpclib-basm = { version = "0.9.0", path = "cpclib-basm", default-features = false }
cpclib-bdasm = { version = "0.9.0", path = "cpclib-bdasm", default-features = false }
cpclib-bndbuild = { version = "0.7.0", path = "cpclib-bndbuild", default-features = false }
cpclib-bndbuild-tauri = { version = "0.1.0", path = "cpclib-bndbuild-tauri/src-tauri", default-features = false }
cpclib-common = { version = "0.9.0", path = "cpclib-common", default-features = false }
cpclib-cpr = { version = "0.7.0", path = "cpclib-cpr", default-features = false }
cpclib-crunch = { version = "0.1.0", path = "cpclib-crunch", default-features = false }
cpclib-crunchers = { version = "0.9.0", path = "cpclib-crunchers", default-features = false }
cpclib-disc = { version = "0.9.2", path = "cpclib-disc", default-features = false }
cpclib-image = { version = "0.9.0", path = "cpclib-image", default-features = false }
cpclib-imgconverter = { version = "0.9.0", path = "cpclib-imgconverter", default-features = false }
cpclib-macros = { version = "0.9.0", path = "cpclib-macros", default-features = false }
cpclib-runner = { version = "0.7.0", path = "cpclib-runner", default-features = false }
cpclib-sna = { version = "0.9.0", path = "cpclib-sna", default-features = false }
cpclib-tokens = { version = "0.9.0", path = "cpclib-tokens", default-features = false }
cpclib-xfer = { version = "0.9.0", path = "cpclib-xfer", default-features = false }
cpclib-xfertool = { version = "0.9.0", path = "cpclib-xfertool", default-features = false }
cpclib-z80emu = { version = "0.9.0", path = "cpclib-z80emu", default-features = false }

anyhow = "1.0.95"
arrayref = "0.3.9"
as-slice = "0.2.1"
bitfield = "0.14.0"
bitflags = "2.8.0"
bitvec = "1.0.1"
built = { version = "0.7.5", features = ["chrono"] }
camino = "1.1.9"
camino-tempfile = "1.1.1"
cc = "1.2.10"
cfg-if = "1.0.0"
chardetng = { version = "0.1.17", features = ["multithreading"] }
choice_nocase = "0.2.0"
clap = { version="4.5.26", features=["color", "derive"]}
codespan-reporting = "0.11.1"
#contracts = "0.6.3"
const_format = {version="0.2.34", features = ["fmt"]}
crossbeam-channel = "0.5.14"
curl = "0.4.47"
custom_error = "1.9.2"
dbg = "1.0.4"
delegate = "0.13.2"
either = "1.13.0"
#encoding_rs = { version = "0.8.34", default-features = false, features = [   "alloc", ] }
enigo = "0.3"
enumn = "0.1.14"
env_logger = "0.11"
evalexpr = "11.3.1"
exitcode = "1.1.2"
gag = "1.0.0"
getset = "0.1.3"
gif = "0.12" # XXX may be compatible with gif-dispose
gif-dispose = "4.0.1"
glob = "0.3.2"
globset = "0.4.15"
hashbag = "0.1.12"
hotwatch = { version = "0.5.0" }
hxcfe = "0.1.5"
image = "0.25.5"
indicatif = "0.17.9"
itertools = "0.12.1"
libc = "0.2.169"
log = "0.4.25"
minus = { version = "5.6.1", features = ["static_output"] }
notify = "6.1.1"
num = "0.4.3"
num-bigint = "0.4.6"
nutype = "0.5.1"
ordered-float = "4.6.0"
ouroboros = "0.18.5"
parking_lot = "0.12.3"
paste = "1.0.15"
path-absolutize = "3.1.1"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
#ratatui = "0.28.1"
rayon = "1.10.0"
regex = "1.11.1"
remain = "0.2.14"
ureq = "2.12.1"
resolve-path = "0.1.0"
rust-embed = { version = "8.5.0", features = ["compression"] }
rustyline = { version = "14.0.0" }
rustyline-derive = { version = "0.10.0" }
self_cell = "1.1.0"
self_update = "0.41.0"
semver = "1.0.24"
serde = { version = "1.0.217", features = ["derive"] }
serial_test = "3.2.0"
sevenz-rust = "0.6.1"
shlex = "1.3.0"
similar-asserts = "1.6.1"
simple_logger = { version = "4.3.3" }
smallvec = "1.13.2"
smol_str = "0.2.2"
strsim = "0.11.1"
strum = { version = "0.26", features = ["derive"] }
subprocess = { version = "0.2.9" }
substring = "1.4.5"
syn = "2.0.96"
term_grid = { version = "0.2.0" }
termize = { version = "0.1.1" }
test-generator = "0.3.1"
thiserror = "1.0"
time = "0.3.37"
transparent = "0.4.0"
utf8-chars = "3.0.5"
velcro = "0.5.4"
winnow = { version = "0.6.24", features = ["simd"] }
xcap = "0.0.11"
zip-extract = "=0.1.3"

# gui based dependencies
eframe = "0.29"
claui = "0.4"
egui_file = "0.19"
open = "5.3.2"


[workspace.lints]

[patch.crates-io]
#choice_nocase = {path = "../../choice_nocase/"}

#hxcfe-sys = {path = "../hxc_rust/hxcfe-sys/"}
#hxcfe = {path = "../hxc_rust/hxcfe/"}
#hxcadaptor-sys = {path = "../hxc_rust/hxcadaptor-sys/"}

#cpclib-xferfs = {path = "./cpclib-xferfs/"}
cpclib = { path = "./cpclib/" }
cpclib-asm = { path = "./cpclib-asm/" }
cpclib-basic = { path = "./cpclib-basic/" }
cpclib-basm = { path = "./cpclib-basm/" }
cpclib-bdasm = { path = "./cpclib-bdasm/" }
cpclib-bndbuild = { path = "./cpclib-bndbuild/" }
cpclib-bndbuild-tauri = { path = "./cpclib-bndbuild-tauri/src-tauri" }
cpclib-common = { path = "./cpclib-common/" }
cpclib-cpr = { path = "./cpclib-cpr/" }
cpclib-crunch = { path = "./cpclib-crunch/" }
cpclib-crunchers = { path = "./cpclib-crunchers/" }
cpclib-disc = { path = "./cpclib-disc/" }
cpclib-image = { path = "./cpclib-image/" }
cpclib-imgconverter = { path = "./cpclib-imgconverter/" }
cpclib-macros = { path = "./cpclib-macros/" }
cpclib-sna = { path = "./cpclib-sna/" }                         #
cpclib-tokens = { path = "./cpclib-tokens/" }
cpclib-visual-bndbuild = { path = "./cpclib-visual-bndbuild/" }
cpclib-wasm = { path = "./cpclib-wasm" }
cpclib-xfer = { path = "./cpclib-xfer/" }
cpclib-xfertool = { path = "./cpclib-xfertool/" }
cpclib-z80emu = { path = "./cpclib-z80emu/" }


[profile.dev]
opt-level = 0

[profile.release]
#strip = true
lto = false
codegen-units = 1
opt-level = 3
debug = 1
