[workspace]
members = [
  "cpclib",
  "cpclib-asm",
  "cpclib-basic",
  "cpclib-basm", "cpclib-basmdoc",
  "cpclib-bdasm",
  "cpclib-bndbuild",
  "cpclib-catalog",
  "cpclib-catart",
  "cpclib-bndbuild-ratatui",
  "cpclib-bndbuild-tauri/src-tauri",
  "cpclib-rasm-basm-tests",
  "cpclib-python",
  "cpclib-common",
  "cpclib-cpr",
  "cpclib-cprcli", 
   "cpclib-crunch",
  "cpclib-crunchers",
  "cpclib-csl",
  "cpclib-cslcli",
  "cpclib-disc",
  "cpclib-emucontrol",
  "cpclib-files",
  "cpclib-image",
  "cpclib-imgconverter",
  "cpclib-locomotive",
  "cpclib-macros",
  "cpclib-orgams-ascii",
  "cpclib-runner", 
  "cpclib-sna",
  "cpclib-sprite-compiler", 
  "cpclib-tokens",
  "cpclib-visual-basm",
  "cpclib-visual-bndbuild",
  "cpclib-wasm", 
  "cpclib-xfer",
  "cpclib-xfertool",
  "cpclib-z80emu", "cpclib-borgams",
  #"cpclib-bndbuild-ratatui",
  #  "cpclib-xferfs",
]

default-members = [
  "cpclib",
  "cpclib-asm",
  "cpclib-basic",
  "cpclib-basm",
  "cpclib-basmdoc",
  "cpclib-bdasm",
  "cpclib-bndbuild",
  "cpclib-catalog",
  "cpclib-catart",
  "cpclib-common",
  "cpclib-cpr",
  "cpclib-cprcli", 
   "cpclib-crunch",
  "cpclib-crunchers",
  "cpclib-csl",
  "cpclib-cslcli",
  "cpclib-disc",
  "cpclib-emucontrol",
  "cpclib-files",
  "cpclib-image",
  "cpclib-imgconverter",
  "cpclib-locomotive",
  "cpclib-macros",
  "cpclib-orgams-ascii",
  "cpclib-runner", 
  "cpclib-sna",
  "cpclib-sprite-compiler", 
  "cpclib-tokens",
  "cpclib-wasm", 
  "cpclib-xfer",
  "cpclib-xfertool",
  "cpclib-python",
]

resolver = "2"

[workspace.package]
version = "0.11.0"
authors = ["Romain Giot <giot.romain@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/cpcsdk/rust.cpclib"
homepage = "https://github.com/cpcsdk/rust.cpclib"
description = "Amstrad CPC crossdev toolchain"

[workspace.dependencies]

cpclib = { version = "0.11.0", path = "cpclib", default-features = false }
cpclib-asm = { version = "0.11.0", path = "cpclib-asm", default-features = false }
cpclib-basic = { version = "0.11.0", path = "cpclib-basic", default-features = false }
cpclib-basm = { version = "0.11.0", path = "cpclib-basm", default-features = false }
cpclib-basmdoc = { version = "0.11.0", path = "cpclib-basmdoc", default-features = false }
cpclib-bdasm = { version = "0.11.0", path = "cpclib-bdasm", default-features = false }
cpclib-bndbuild = { version = "0.11.0", path = "cpclib-bndbuild", default-features = false }
cpclib-borgams = { version = "0.11.0", path = "cpclib-borgams", default-features = false }
cpclib-catart = { version = "0.11.0", path = "cpclib-catart", default-features = false }
cpclib-catalog = { version = "0.11.0", path = "cpclib-catalog", default-features = false }
cpclib-bndbuild-tauri = { version = "0.1.0", path = "cpclib-bndbuild-tauri/src-tauri", default-features = false }
cpclib-common = { version = "0.11.0", path = "cpclib-common", default-features = false }
cpclib-cpr = { version = "0.11.0", path = "cpclib-cpr", default-features = false }
cpclib-crunch = { version = "0.11.0", path = "cpclib-crunch", default-features = false }
cpclib-crunchers = { version = "0.11.0", path = "cpclib-crunchers", default-features = false }
cpclib-csl = { version = "0.11.0", path = "cpclib-csl", default-features = false }
cpclib-disc = { version = "0.11.0", path = "cpclib-disc", default-features = false }
cpclib-emucontrol = { version = "0.11.0", path = "cpclib-emucontrol", default-features = false }
cpclib-files = { version = "0.11.0", path = "cpclib-files", default-features = false }
cpclib-image = { version = "0.11.0", path = "cpclib-image", default-features = false }
cpclib-imgconverter = { version = "0.11.0", path = "cpclib-imgconverter", default-features = false }
cpclib-locomotive = { version = "0.11.0", path = "cpclib-locomotive", default-features = false }
cpclib-macros = { version = "0.11.0", path = "cpclib-macros", default-features = false }
cpclib-orgams-ascii = { version = "0.11.0", path = "cpclib-orgams-ascii", default-features = false }
cpclib-runner = { version = "0.11.0", path = "cpclib-runner", default-features = false }
cpclib-sna = { version = "0.11.0", path = "cpclib-sna", default-features = false }
cpclib-sprite-compiler = { version = "0.11.0", path = "cpclib-sprite-compiler", default-features = false }
cpclib-tokens = { version = "0.11.0", path = "cpclib-tokens", default-features = false }
cpclib-xfer = { version = "0.11.0", path = "cpclib-xfer", default-features = false }
cpclib-xfertool = { version = "0.11.0", path = "cpclib-xfertool", default-features = false }
cpclib-z80emu = { version = "0.11.0", path = "cpclib-z80emu", default-features = false }

ahash = "0.8"
anyhow = "1.0.100"
arrayref = "0.3.9"
as-slice = "0.2.1"
beef = "0.5.2"
bitfield = "0.19.4"
bitflags = "2.10.0"
bitvec = "1.0.1"
bon = "3.8.1"
built = { version = "0.8.0", features = ["chrono"] }
camino = "1.2.2"
camino-tempfile = "1.4.1"
walkdir = "2.5.0"
cc = "1.2.51"
cfg-if = "1.0.4"
chardetng = { version = "0.1.17", features = ["multithreading"] }
choice_nocase = "0.2.0"
clap = { version="4.5.54", features=["color", "derive"]}
codespan-reporting = "0.13.1"
#contracts = "0.6.3"
const_format = {version="0.2.35", features = ["fmt"]}
crossbeam-channel = "0.5.15"
curl = "0.4.49"
custom_error = "1.9.2"
dbg = "1.0.4"
delegate = "0.13.5"
either = "1.15.0"
#encoding_rs = { version = "0.8.34", default-features = false, features = [   "alloc", ] }
enigo = "0.6"
enumn = "0.1.14"
env_logger = "0.11"
evalexpr = "13.1.0"
exitcode = "1.1.2"
fs-err = "3.3.0"
gag = "1.0.0"
getset = "0.1.6"
gif = "0.13" # XXX may be compatible with gif-dispose
gif-dispose = "5.0.1"
glob = "0.3.3"
globset = "0.4.18"
hashbag = "0.1.13"
http = "1.4"
hotwatch = { version = "0.5.0" }
hxcfe = "0.1.5"
image = "0.25.9"
indicatif = "0.18.3"
itertools = "0.14"
libc = "0.2.179"
minijinja = "2.14.0"
log = "0.4.29"
memchr = "2"
minus = { version = "5.6.1", features = ["static_output"] }
notify = "8.2.0"
num = "0.4.3"
num-bigint = "0.4.6"
nutype = "0.6.2"
ordered-float = "5.1.0"
ouroboros = "0.18.5"
owo-colors = "4"
parking_lot = "0.12.5"
paste = "1.0.15"
path-absolutize = "3.1.1"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.105"
quote = "1.0.43"
#ratatui = "0.28.1"
rayon = "1.11.0"
regex = "1.12.2"
remain = "0.2.15"
rtzx = "0.4.0"
ureq = "3.1.4"
resolve-path = "0.1.0"
rust-embed = { version = "8.9.0", features = ["compression"] }
rust-ini = "0.21.3"
rustyline = { version = "17.0.2" }
rustyline-derive = { version = "0.11.1" }
self_cell = "1.2.2"
self_update = "0.42.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serial_test = "3.3.1"
sevenz-rust = "0.6.1"
shlex = "1.3.0"
similar-asserts = "1.7.0"
simple_logger = { version = "5.1.0" }
smallvec = "1.15.1"
smol_str = "0.3.4"
strsim = "0.11.1"
strum = { version = "0.27", features = ["derive"] }
subprocess = { version = "0.2.13" }
substring = "1.4.5"
syn = "2.0.113"
term_grid = { version = "0.2.0" }
termize = { version = "0.2.1" }
test-generator = "0.3.1"
thiserror = "2.0"
time = "0.3.44"
transparent = "0.4.2"
utf8-chars = "3.0.6"
velcro = "0.5.4"
winnow = { version = "0.7.14", features = ["simd"] }
xcap = "0.8.1"
zip-extract = "=0.1.3"

# gui based dependencies
eframe = "0.33"
claui = "0.4"
egui_file = "0.24"
open = "5.3.3"


[workspace.lints]

[patch.crates-io]
#choice_nocase = {path = "../../choice_nocase/"}

#hxcfe-sys = {path = "../hxc_rust/hxcfe-sys/"}
#hxcfe = {path = "../hxc_rust/hxcfe/"}
#hxcadaptor-sys = {path = "../hxc_rust/hxcadaptor-sys/"}

#cpclib-xferfs = {path = "./cpclib-xferfs/"}
cpclib = { path = "./cpclib/" }
cpclib-asm = { path = "./cpclib-asm/" }
cpclib-basic = { path = "./cpclib-basic/" }
cpclib-basm = { path = "./cpclib-basm/" }
cpclib-basmdoc = { path = "./cpclib-basmdoc/" }
cpclib-bdasm = { path = "./cpclib-bdasm/" }
cpclib-bndbuild = { path = "./cpclib-bndbuild/" }
cpclib-bndbuild-tauri = { path = "./cpclib-bndbuild-tauri/src-tauri" }
cpclib-common = { path = "./cpclib-common/" }
cpclib-cpr = { path = "./cpclib-cpr/" }
cpclib-crunch = { path = "./cpclib-crunch/" }
cpclib-crunchers = { path = "./cpclib-crunchers/" }
cpclib-disc = { path = "./cpclib-disc/" }
cpclib-files = { path = "./cpclib-files/" }
cpclib-image = { path = "./cpclib-image/" }
cpclib-imgconverter = { path = "./cpclib-imgconverter/" }
cpclib-macros = { path = "./cpclib-macros/" }
cpclib-sna = { path = "./cpclib-sna/" }
cpclib-sprite-compiler = { path = "./cpclib-sprite-compiler/" }
cpclib-tokens = { path = "./cpclib-tokens/" }
cpclib-visual-bndbuild = { path = "./cpclib-visual-bndbuild/" }
cpclib-wasm = { path = "./cpclib-wasm" }
cpclib-xfer = { path = "./cpclib-xfer/" }
cpclib-xfertool = { path = "./cpclib-xfertool/" }
cpclib-z80emu = { path = "./cpclib-z80emu/" }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
