[package]
name = "basm"
version = "0.5.0"
edition = "2021"
description = "z80 assembler relying on cpclib-asm"
repository = "https://github.com/cpcsdk/rust.cpclib"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpclib-asm = {version="0.5.0", features=["basm"]}
cpclib-common = {version="0.5.0"}
time = "0.2.27"

[dev-dependencies]
test-generator = "0.3.0"
tempfile = "3.3.0"
pretty_assertions = "1.1.0"
criterion = "0.3"
globset = "0.4.8"
regex = "1.5.5"

[build-dependencies]
built = { version = "0.5.1", features = ["chrono"] }


[[bench]]
name = "basm_benchs"
harness = false

[profile.release]
debug = 1

[rust]
debuginfo-level = 1