[package]
name = "cpclib-asm-webasm"
version = "0.1.0"
authors = ["Romain Giot <giot.romain@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
cpclib-asm = {version="0.5.0", features=[]}
cpclib-sna = {version="0.5.0" }
#wasm-bindgen-rayon = {version="1.0"} 

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
]


[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
debug = true
# Tell `rustc` to optimize for small code size.
#opt-level = "s"


