[package]

name = "cpclib-asm"
version = "0.6.1-alpha.2"
description = "cpclib libraries related to z80 assembling"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

[dependencies]


cpclib-basic = "0.6.1-alpha.2"
cpclib-sna = "0.6.1-alpha.2"
cpclib-tokens = "0.6.1-alpha.2"
cpclib-disc = "0.6.1-alpha.2"
cpclib-common = "0.6.1-alpha.2"
cpclib-image = "0.6.1-alpha.2"
cpclib-xfer = {version="0.6.1-alpha.2", optional=true}


arrayref.workspace = true
cfg-if.workspace = true
codespan-reporting.workspace = true
crc.workspace = true
custom_error.workspace = true
delegate.workspace = true
either.workspace = true
failure.workspace = true
getset.workspace = true
globset.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
libc.workspace = true
matches.workspace = true
hashbag.workspace = true
ouroboros.workspace = true
paste.workspace = true
regex.workspace = true
rust-embed = { workspace = true, features = ["compression"] }
serde = { workspace = true, features = ["derive"] }
substring.workspace = true
velcro.workspace = true
assert_matches.workspace = true
tempfile.workspace = true
chardetng.workspace = true
smartstring.workspace = true



[build-dependencies]
built.workspace = true
cc.workspace = true

#[lib]
#crate-type = ["cdylib", "dylib"]


[features]
default = ["colored_errors"]
basm = ["cpclib-common/cmdline", "cpclib-xfer"] #only usefull for the basm crate
colored_errors = []
