[package]
name = "cpclib-asm"
version = "0.7.0"
description = "cpclib libraries related to z80 assembling"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

[dependencies]
cpclib-basic.workspace = true
cpclib-crunchers.workspace = true
cpclib-sna.workspace = true
cpclib-tokens.workspace = true
cpclib-disc.workspace = true
cpclib-common.workspace = true
cpclib-image.workspace = true

arrayref.workspace = true
cfg-if.workspace = true
codespan-reporting.workspace = true
crc.workspace = true
custom_error.workspace = true
delegate.workspace = true
either.workspace = true
failure.workspace = true
getset.workspace = true
globset.workspace = true
lazy_static.workspace = true
libc.workspace = true
matches.workspace = true
hashbag.workspace = true
ouroboros.workspace = true
paste.workspace = true
regex.workspace = true
rust-embed = { workspace = true, features = ["compression", "debug-embed"] }
serde = { workspace = true, features = ["derive"] }
substring.workspace = true
velcro.workspace = true
assert_matches.workspace = true
tempfile.workspace = true
chardetng.workspace = true
encoding_rs.workspace = true
smartstring.workspace = true
indicatif = {workspace = true, optional=true}




[build-dependencies]
built.workspace = true
cc.workspace = true
build-deps = "0.1.4"

#[lib]
#crate-type = ["cdylib", "dylib"]


[features]
default = ["colored_errors", "indicatif"]
colored_errors = []
indicatif = ["dep:indicatif"]
