[package]
name = "cpclib-asm"
version = "0.8.1"
description = "cpclib libraries related to z80 assembling"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.workspaces]
independent = true

[dependencies]
cpclib-basic.workspace = true
cpclib-crunchers.workspace = true
cpclib-sna.workspace = true
cpclib-tokens.workspace = true
cpclib-disc.workspace = true
cpclib-common.workspace = true
cpclib-cpr.workspace = true
cpclib-image.workspace = true

arrayref.workspace = true
assert_matches.workspace = true
cfg-if.workspace = true
choice_nocase.workspace = true
codespan-reporting.workspace = true
crc.workspace = true
custom_error.workspace = true
delegate.workspace = true
either.workspace = true
encoding_rs.workspace = true
getset.workspace = true
globset.workspace = true
hashbag.workspace = true
indicatif = {workspace = true, optional=true}
line-span = "0.1"
lazy_static.workspace = true
libc.workspace = true
matches.workspace = true
ouroboros.workspace = true
paste.workspace = true
regex.workspace = true
rust-embed = { workspace = true, features = ["compression", "debug-embed"] }
serde = { workspace = true, features = ["derive"] }
smartstring.workspace = true
substring.workspace = true
tempfile.workspace = true
velcro.workspace = true

rayon-cond = {version="0.3.0", optional= true}
chardetng = {workspace = true, optional = true}
aho-corasick = "1.1.3"
compact_str = "0.7.1"
beef = "0.5.2"
enumflags2 = "0.7.10"
prettydiff = "0.6.4"

[build-dependencies]
built.workspace = true
cc.workspace = true
build-deps = "0.1.4"

#[lib]
#crate-type = ["cdylib", "dylib"]


[features]
default = ["colored_errors", "indicatif"]
colored_errors = []
indicatif = ["dep:indicatif"]
rayon = ["cpclib-common/rayon", "dep:rayon-cond"]
chardet = ["dep:chardetng"]
hfe = ["cpclib-disc/hfe"]

