[package]

name = "cpclib-basic"
version = "0.7.0"
description = "cpclib libraries related to locomotive basic"


authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[package.metadata.workspaces]
independent = true

[dependencies]
cpclib-disc.workspace = true
cpclib-common = {workspace = true, features=["cmdline"]}
cpclib-sna.workspace = true

arrayref.workspace = true
cfg-if.workspace = true
custom_error.workspace = true
either.workspace = true
failure.workspace = true
getset.workspace = true
matches.workspace = true
#memchr.workspace = true
serde.workspace = true
num_enum.workspace = true
paste.workspace = true

[build-dependencies]
built.workspace = true

[features]
basic = []

[[bin]]
name = "locomotive"
path = "src/bin/locomotive.rs"
required-features = ["basic"]
