[package]

name = "cpclib-basic"
version.workspace = true
description = "cpclib libraries related to locomotive basic"


authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[package.metadata.workspaces]
independent = true

[dependencies]
cpclib-disc.workspace = true
cpclib-common = {workspace = true, features=["cmdline"]}
cpclib-sna.workspace = true
cpclib-files.workspace = true
fs-err.workspace = true

#arrayref.workspace = true
cfg-if.workspace = true
#custom_error.workspace = true
either.workspace = true
#getset.workspace = true
#memchr.workspace = true
serde.workspace = true
paste.workspace = true
thiserror.workspace = true

[build-dependencies]
built.workspace = true

[features]
basic = []
rayon = ["cpclib-common/rayon"]
