[package]
name = "cpclib-basm"
version = "0.7.0"
description = "z80 assembler relying on cpclib-asm"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[package.metadata.workspaces]
independent = true

[dependencies]
cpclib-asm.workspace = true
cpclib-common =  {workspace = true, features=["cmdline"]}
cpclib-xfer = {workspace=true, default-features=false, optional=true}
cpclib-disc.workspace = true

time = "0.3.23"

[dev-dependencies]
test-generator = "0.3.1"
tempfile = "3.7.0"
pretty_assertions = "1.4.0"
criterion = "0.5.1"
globset = "0.4.12"
regex = "1.9.1"
serial_test = "2.0.0"

[build-dependencies]
built = { version = "0.6.1", features = ["chrono"] }
build-deps = "0.1.4"
#static_vcruntime = "2.0"

[[bench]]
name = "basm_benchs"
harness = false


[[bin]]
name = "basm"
path = "src/main.rs"


[features]
default = ["xferlib", "indicatif", "colored_errors"]
xferlib = ["cpclib-xfer"]
indicatif = ["cpclib-asm/indicatif"]
colored_errors = ["cpclib-asm/colored_errors"]
