[package]
name = "cpclib-basm"
version = "0.10.0"
description = "z80 assembler relying on cpclib-asm"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[package.metadata.workspaces]
independent = true

[dependencies]
cpclib-asm.workspace = true
cpclib-common =  {workspace = true, features=["cmdline"]}
cpclib-xfer = {workspace=true, default-features=false, optional=true}
cpclib-disc.workspace = true

rust-ini = "0.21.1"
const_format.workspace = true
#diff = "0.1.13"
time.workspace = true

[dev-dependencies]
test-generator.workspace = true
camino-tempfile.workspace = true
pretty_assertions.workspace = true
globset.workspace = true
regex.workspace = true
serial_test.workspace = true
parking_lot.workspace = true
glob.workspace = true
criterion = "0.5.1"
strip-ansi-escapes = "0.2.1"

[build-dependencies]
built = { version = "0.7.7", features = ["chrono"] }
build-deps = "0.1.4"
#static_vcruntime = "2.0"

[[bench]]
name = "basm_benchs"
harness = false


[[bin]]
name = "basm"
path = "src/main.rs"


[features]
default = ["xferlib", "indicatif", "colored_errors"]
xferlib = ["cpclib-xfer"]
indicatif = ["cpclib-asm/indicatif"]
colored_errors = ["cpclib-asm/colored_errors"]
rayon = ["cpclib-asm/rayon", "cpclib-common/rayon"]
hfe = ["cpclib-disc/hfe", "cpclib-asm/hfe"]

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true
