[package]
name = "cpclib-basmdoc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
cpclib-asm.workspace = true
cpclib-common.workspace = true

delegate.workspace = true
glob.workspace = true
minijinja = { workspace = true, features = ["loader"] }
regex = "1.11"
rust-embed = {workspace = true, features = ["include-exclude", "compression"]}
serde.workspace = true

dirs = "5.0"
ureq = "2.10"

pandoc = {version="0.8"}
pulldown-cmark = "0.12"

[lints]
workspace = true


[[bin]]
name = "basmdoc"
path = "src/bin/basmdoc.rs"